--- a/index.html
+++ b/index.html
@@ -198,5 +198,69 @@
             </section>
 
     </main>
+    <!-- footer section -->
+     <footer class="bg-orange-100 text-gray-500 py-10 px-8 md:px-16">
+        <div class="w-9/12 mx-auto">
+            <div class="mb-8 flex justify-between">
+                <img class="mb-8" src="images/cup.png" alt="">
+                <div class="flex items-center gap-2">
+                    <h4>Ready to get strated?</h4>
+                    <button class="bg-gradient-to-r from-orange-500 to-red-500 p-3 rounded-lg text-white">Get Started</button>
+                </div>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4">
+
+                <div>
+                    <h4 class="font-semibold text-lg mb-4 text-black">Quick Links</h4>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-500" href="">Home</a></li>
+                        <li><a class="hover:text-orange-500" href="">About Us</a></li>
+                        <li><a class="hover:text-orange-500" href="">Insurance</a></li>
+                        <li><a class="hover:text-orange-500" href="">Privacy Policy</a></li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h4 class="font-semibold text-lg mb-4 text-black">Our Service</h4>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-500" href="">Life Insurance</a></li>
+                        <li><a class="hover:text-orange-500" href="">Car Insurance</a></li>
+                        <li><a class="hover:text-orange-500" href="">Health Insurance</a></li>
+                        <li><a class="hover:text-orange-500" href="">House Insurance</a></li>
+                    </ul>
+
+                </div>
+                <div>
+                    <h4 class="font-semibold text-lg mb-4 text-black">Help</h4>
+                    <ul class="space-y-2">
+                        <li><a class="hover:text-orange-500" href="">FAQs</a></li>
+                        <li><a class="hover:text-orange-500" href="">Contact Us</a></li>
+                        
+                    </ul>
+ 
+                </div>
+                <div>
+                    <h2 class="font-semibold text-lg mb-4 text-black">Subscribe to our newsletter</h2>
+                    <div class="flex space-y-2">
+                        <input placeholder="Email address" class="bg-transparent border-b-2 border-black w-4/6" type="text">
+                        <i class="fa-solid fa-chevron-right w-7 h-7 bg-orange-600 text-white rounded-full justify-center items-center inline-flex py-1 px-2"></i>
+
+                    </div>
+                    <div class="flex justify-between w-2/5 mb-2 mt-8">
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-twitter"></i>
+
+                    </div>
+                </div>
+
+            </div>
+            <div class="text-center pt-4 mt-4">
+                <p class="text-sm text-gray-600">© 2027 UIDesign.to - All rights reserved.</p>
+            </div>
+
+        </div>
+
+     </footer>
 </body>
 </html>
