--- a/index.html
+++ b/index.html
@@ -197,6 +197,49 @@
 
             </section>
 
+            <!-- news section -->
+
+            <section class="mb-24">
+                <div class="justify-center text-center">
+                    <h1 class="text-2xl font-bold">News & Events</h1>
+                    <p class="text-gray-500">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+                    <div class="p-2 shadow-lg rounded-lg">
+                        <img class="pt-4" src="images/news-1.png" alt="">
+                       <div class="pl-4">
+                        <p class="text-sm text-gray-500">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold">Collecting 8 points for <br> discount</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="border-none text-black font-semibold">Learn More</button>
+                       </div>
+
+                    </div>
+                    <div class="p-2 shadow-lg rounded-lg">
+                        <img class="pt-4" src="images/news-2.png" alt="">
+                       <div class="pl-4">
+                        <p class="text-sm text-gray-500">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold">Collecting 8 points for <br> discount</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="border-none text-black font-semibold">Learn More</button>
+                       </div>
+
+                    </div>
+                    <div class="p-2 shadow-lg rounded-lg">
+                        <img class="pt-4" src="images/news-3.png" alt="">
+                       <div class="pl-4">
+                        <p class="text-sm text-gray-500">Feb 05, 2027</p>
+                        <h3 class="text-lg font-bold">Collecting 8 points for <br> discount</h3>
+                        <p>There are many variations of passages of Lorem Ipsum available.</p>
+                        <button class="border-none text-black font-semibold">Learn More</button>
+                       </div>
+
+                    </div>
+
+                </div>
+
+            </section>
+
     </main>
     <!-- footer section -->
      <footer class="bg-orange-100 text-gray-500 py-10 px-8 md:px-16">
